@@ -48,6 +48,18 @@ class Parameter extends Node {
     }
 
     /**
+     * Returns the parameter's internal value.
+     *
+     * @return string
+     */
+    public function getValue() {
+
+        return $this->value;
+
+    }
+
+
+    /**
      * Turns the object back into a serialized blob.
      *
      * @return string
