@@ -9,6 +9,7 @@
 	* Added: Property::getValue().
 	* Added: Document class.
 	* Added: Document::createComponent and Document::createProperty.
+	* Added: Parameter::getValue().
 
 
 2.0.7-stable (2013-03-05)
